# AutonomousDriving

./: README.md
gaia_msgs/: CMakeLists.txt  package.xml
gaia_msgs/msg/: DetectedCone.msg  DetectedConeArray.msg
robot-localization/launch/: dual_ekf_navsat_example.launch  dual_ekf_navsat_imu_gps.launch  dual_ekf_navsat_imu_gps2.launch  dual_ekf_navsat_imu_odom.launch  dual_ekf_navsat_imu_odom_gps copy.launch  dual_ekf_navsat_imu_odom_gps.launch  erp42_vehicle_rviz.launch  erp42_vehicle_rviz_gaia.launch  gaia_all.launch  gaia_gps_imu.launch  gaia_local.launch  kiss_icp.launch  navsat_transform_template.launch  single_ekf_navsat_imu_odom_gps.launch  static_tf2_imu.launch  tf.launch
robot-localization/params/: dual_ekf_navsat_example.yaml  dual_ekf_navsat_imu_gps.yaml  ekf_template.yaml  gaia_all.yaml  gaia_gps_imu.yaml  kiss_icp.yaml  navsat_transform_template.yaml
robot-localization/rviz/: robot_localization.rviz  robot_localization_gaia.rviz
robot-localization/src/: navsat_transform.cpp
vectornav/launch/: vn100_imu.launch
vectornav/params/: vn100.yaml
